Update CSS and HTML files

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -192,7 +192,7 @@
                     "ico": "file-invoice",
                      "title":"Actualización de documentos de identidad",
                     "image":"tmp_servicio.png",
-                    "content":"¡Mantén tu información al día! Tener tus documentos de identidad nos ayuda a protegerte y a garantizar un excelente servicio"
+                    "content":"¡Mantén tu información al día! Tener tus documentos de identidad nos ayuda a protegerte y a garantizar un excelente servicio."
                   }'
                   ></include>
 
@@ -202,7 +202,7 @@
                     "ico": "file-lines",
                      "title":"Actualización de datos de contacto",
                     "image":"tmp_servicio.png",
-                    "content":"¡Aseguremos una buena comunicación! Tener actualizada tu información nos ayuda a ofrecerte la mejor atención"
+                    "content":"¡Aseguremos una buena comunicación! Tener actualizada tu información nos ayuda a ofrecerte la mejor atención."
                   }'
                   ></include>
                 </ul>
@@ -215,7 +215,7 @@
                     "ico": "file-invoice",
                      "title":"Redistribuciones de mesada",
                     "image":"tmp_servicio.png",
-                    "content":"Si recientemente has realizado cambios en la distribución de tu mesada pensional, como ajustes en los montos o beneficiarios, ¡cuéntanos! Tener esta información actualizada nos ayuda a que tus beneficios en ASULADO se administren de la mejor forma."
+                    "content":"Si recientemente has tenido cambios en la distribución de tu mesada, como ajustes en los montos o beneficiarios, ¡cuéntanos! Esto nos ayuda a que tus beneficios se administren de la mejor forma."
                   }'
                   ></include>
 
@@ -234,7 +234,7 @@
                     "ico": "file-lines",
                      "title":"Certificado de supervivencia",
                     "image":"tmp_servicio.png",
-                    "content":"Documento que certifica que te encuentras disponible para seguir recibiendo tu mesada pensional. Este certificado debe ser presentado por los ciudadanos colombianos que se encuentran pensionados y viven en otro país."
+                    "content":"Documento que certifica que te encuentras disponible para seguir recibiendo tu mesada pensional. Lo deben presentar los colombianos que se encuentran pensionados y viven en otro país."
                   }'
                   ></include>
                   <include
@@ -261,7 +261,7 @@
                     "ico": "file-lines",
                      "title":"Novedades de cuenta financiera",
                     "image":"tmp_servicio.png",
-                    "content":"Cuéntanos si recientemente hubo cambios en tu cuenta financiera, ya sea el banco, número de cuenta o cualquier actualización. Esto nos permite garantizar que tus mesadas se procesen sin contratiempos. ¡Tu bienestar es nuestra prioridad!"
+                    "content":"Cuéntanos si recientemente hubo cambios en tu cuenta financiera, como el banco o número de cuenta. Esto nos permite garantizar que tus mesadas se procesen sin contratiempos."
                   }'
                   ></include>
                   <include
@@ -270,7 +270,7 @@
                     "ico": "file-lines",
                      "title":"Novedades Pensión Voluntaria",
                     "image":"tmp_servicio.png",
-                    "content":"Si has realizado cambios en tu Pensión Voluntaria, como ajustes en las contribuciones o cualquier modificación, ¡cuéntanos! Así podemos mantener tu información actualizada y brindarte el mejor acompañamiento."
+                    "content":"Si has realizado cambios en tu Pensión Voluntaria, como ajustes en las contribuciones o cualquier modificación, ¡cuéntanos! Así podemos brindarte el mejor acompañamiento."
                   }'
                   ></include>
                 </ul>
@@ -281,9 +281,9 @@
                     src="PORTAL/p_home_servicio.html"
                     locals='{ "link":"/PORTAL/pqrs_1_crear.html",
                     "ico": "file-invoice",
-                    "title":"Crear una solicitud",
+                    "title":"Crear una PQRS",
                     "image":"tmp_servicio.png",
-                    "content":"¡Tus inquietudes son importantes para nosotros! Inicia tu solicitud ahora!."
+                    "content":"¡Tus necesidades son importantes para nosotros! Realiza una PQRS ahora."
                   }'
                   ></include>
                 </ul>
@@ -294,18 +294,18 @@
                     src="PORTAL/p_home_servicio.html"
                     locals='{ "link":"/PORTAL/pqrs_2_consultar.html",
                       "ico":"file-lines",
-                      "title":"Consultar una solicitud",
+                      "title":"Consultar una PQRS",
                       "image":"tmp_servicio.png",
-                      "content":"Para nosotros es importante realizar seguimiento a tus solicitudes. Conoce el estado de tu caso"
+                      "content":"¡Para nosotros es importante realizar seguimiento a tus solicitudes! Si recientemente realizaste una PQRS puedes conocer el estado del proceso aquí."
                   }'
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
                     locals='{ "link":"#",
                     "ico": "file-lines",
-                    "title":"Consulta novedades",
+                    "title":"Consulta Novedades",
                     "image":"tmp_servicio.png",
-                    "content":"Certifica que recibes una mesada pensional de ASULADO. Reúne información sobre el tipo de pensión y la fecha desde cuándo formas parte de nuestra familia."
+                    "content":"¡Tu bienestar es nuestra prioridad! Por eso puedes conocer el estado de la actualización de tus novedades de nómina aquí."
                   }'
                   ></include>
                 </ul>
