--- a/src/pages/PORTAL/pqrs_2_consultar.html
+++ b/src/pages/PORTAL/pqrs_2_consultar.html
@@ -49,8 +49,8 @@
               locals='{
                 "cls":"",
                 "ico":"money-check-dollar-pen",
-                "title":"Crear una solicitud",
-                "content":"¡Tus inquietudes son importantes para nosotros! Inicia tu solicitud ahora",
+                "title":"Crear una PQRS",
+                "content":"¡Tus necesidades son importantes para nosotros! Realiza una PQRS ahora.",
                 "link":"/PORTAL/pqrs_1_crear.html"
              }'
             ></include>
