--- a/src/pages/PORTAL/pqrs_1_crear.html
+++ b/src/pages/PORTAL/pqrs_1_crear.html
@@ -36,7 +36,7 @@
         "ico": "comments-question-check",
         "title":"Solicitudes",
         "image":"tmp_header.png",
-        "content":"En ASULADO valoramos tu opinión y estamos comprometidos con la mejora continua. Por eso, hemos creado este espacio especialmente para ti, donde puedes diligenciar tus preguntas, quejas, reclamos y servicios de forma rápida y sencilla."
+        "content":"En ASULADO valoramos tu opinión y estamos comprometidos con la mejora continua. Por eso, hemos creado este espacio especialmente para ti, donde puedes diligenciar tus Preguntas, Quejas, Reclamos y Servicios (PQRS) de forma rápida y sencilla."
       }'
     ></include>
 
@@ -49,8 +49,8 @@
               locals='{
             "cls":"active",
             "ico":"money-check-dollar-pen",
-            "title":"Crear una solicitud",
-            "content":"¡Tus inquietudes son importantes para nosotros! Inicia tu solicitud ahora!",
+            "title":"Crear una PQRS",
+            "content":"¡Tus necesidades son importantes para nosotros! Realiza una PQRS ahora.",
             "link":"/PORTAL/pqrs_1_crear.html"
          }'
             ></include>
