Update forms.css and portal.js, and modify HTML files for creating and consulting requests

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -188,7 +188,7 @@
                 <ul>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ "link":"/PORTAL/3_actualizacion_documento.html",
                     "ico": "file-invoice",
                      "title":"Actualización de documentos de identidad",
                     "image":"tmp_servicio.png",
@@ -281,9 +281,9 @@
                     src="PORTAL/p_home_servicio.html"
                     locals='{ "link":"/PORTAL/pqrs_1_crear.html",
                     "ico": "file-invoice",
-                    "title":"Crear una PQRS",
+                    "title":"Crear una Solicitud",
                     "image":"tmp_servicio.png",
-                    "content":"¡Tus necesidades son importantes para nosotros! Realiza una PQRS ahora."
+                    "content":"¡Tus necesidades son importantes para nosotros! Realiza una Solicitud ahora."
                   }'
                   ></include>
                 </ul>
@@ -294,9 +294,9 @@
                     src="PORTAL/p_home_servicio.html"
                     locals='{ "link":"/PORTAL/pqrs_2_consultar.html",
                       "ico":"file-lines",
-                      "title":"Consultar una PQRS",
+                      "title":"Consultar una Solicitud",
                       "image":"tmp_servicio.png",
-                      "content":"¡Para nosotros es importante realizar seguimiento a tus solicitudes! Si recientemente realizaste una PQRS puedes conocer el estado del proceso aquí."
+                      "content":"¡Para nosotros es importante realizar seguimiento a tus solicitudes! Si recientemente realizaste una Solicitud puedes conocer el estado del proceso aquí."
                   }'
                   ></include>
                   <include
