--- a/src/pages/PORTAL/pqrs_1_crear.html
+++ b/src/pages/PORTAL/pqrs_1_crear.html
@@ -49,8 +49,8 @@
               locals='{
             "cls":"active",
             "ico":"money-check-dollar-pen",
-            "title":"Crear una PQRS",
-            "content":"¡Tus necesidades son importantes para nosotros! Realiza una PQRS ahora.",
+            "title":"Crear una Solicitud",
+            "content":"¡Tus necesidades son importantes para nosotros! Realiza una Solicitud ahora.",
             "link":"/PORTAL/pqrs_1_crear.html"
          }'
             ></include>
