Add form message and display date and time in login page

--- a/src/pages/PORTAL/contrasena.html
+++ b/src/pages/PORTAL/contrasena.html
@@ -57,6 +57,10 @@
                 actualizar tu contraseña
               </span>
             </div>
+            <p class="pa__forms_msg">
+              <b>Fecha y hora de la última actualización:</b> 2/28/2024 14:26:46
+            </p>
+            </div>
             <form
               id="j_id0:j_id2"
               name="j_id0:j_id2"
