--- a/src/pages/PORTAL/login.html
+++ b/src/pages/PORTAL/login.html
@@ -49,6 +49,9 @@
             src="/assets/images/header_logo.svg"
           />
           <div class="pa_login_form_int">
+            <div id="hora">
+              <div id="hora"></div>
+            </div>
             <p>
               Gestiona tus productos, actualiza tus datos o realiza tus
               solicitudes. ¡Todo en un mismo lugar! De forma fácil y segura las
