--- a/src/pages/PORTAL/pqrs_2_consultar.html
+++ b/src/pages/PORTAL/pqrs_2_consultar.html
@@ -36,7 +36,7 @@
       "ico": "comments-question-check",
       "title":"Solicitudes",
       "image":"tmp_header.png",
-      "content":"En ASULADO valoramos tu opinión y estamos comprometidos con la mejora continua. Por eso, hemos creado este espacio especialmente para ti, donde puedes diligenciar tus preguntas, quejas, reclamos y servicios de forma rápida y sencilla."
+      "content":"En ASULADO valoramos tu opinión y estamos comprometidos con la mejora continua. Por eso, hemos creado este espacio especialmente para ti, donde puedes diligenciar tus Preguntas, Quejas, Reclamos y Servicios (PQRS) de forma rápida y sencilla."
     }'
     ></include>
 
@@ -47,10 +47,10 @@
             <include
               src="PORTAL/p_link_servicio.html"
               locals='{
-                "cls":"",
+                "cls":"", 
                 "ico":"money-check-dollar-pen",
-                "title":"Crear una Solicitud",
-                "content":"¡Tus necesidades son importantes para nosotros! Realiza una Solicitud ahora.",
+                "title":"Crear una solicitud",
+                "content":"¡Tus necesidades son importantes para nosotros! Realiza una solicitud ahora.",
                 "link":"/PORTAL/pqrs_1_crear.html"
              }'
             ></include>
