--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -285,7 +285,7 @@
                     "ico": "file-invoice",
                     "title":"Crear una solicitud",
                     "image":"tmp_servicio.png",
-                    "content":"¡Tus necesidades son importantes para nosotros! Conoce los diferentes tipos de consultas que puedes realizar e inicia una solicitud ahora."
+                    "content":"¡Tus necesidades son importantes para nosotros! Conoce los diferentes tipos de consultas que puedes realizar e inicia una solicitud ahora"
                   }'
                   ></include>
                 </ul>
