Ajustes de educación financiera tabs y contenidos

--- a/src/pages/educacion_financiera/index.html
+++ b/src/pages/educacion_financiera/index.html
@@ -45,7 +45,7 @@
       locals='{ "bg": "bg-BG-2", "image": "top_educacion_financiera.png", "t1start":"1", "t2start":"3", "title1": "Educación", "title2": "Financiera" }'
     ></include>
 
-    <section class="as__section">
+    <section class="as__section as__educa">
       <div class="as__section_wrapper full">
         <div class="as__section_content_full">
           <div class="as__educacion_info">
@@ -80,9 +80,11 @@
             }'
             ></include>
           </ul>
+
         </div>
       </div>
     </section>
+    <include src="educacion/info_cursos.html" locals='{"cls":"pt-4"}'></include>
   </block>
   <!-- FIN CONTENIDO DEL HOME -->
 </extends>
