Update CSS and HTML files for Novedades section

--- a/src/pages/PORTAL/index.html
+++ b/src/pages/PORTAL/index.html
@@ -213,7 +213,7 @@
                 <ul>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ "link":"/PORTAL/4_novedades_1.html",
                     "ico": "file-invoice",
                      "title":"Redistribuciones de mesada",
                     "image":"tmp_servicio.png",
@@ -303,7 +303,8 @@
                   ></include>
                   <include
                     src="PORTAL/p_home_servicio.html"
-                    locals='{ "link":"#",
+                    locals='{ 
+                    "link":"#",
                     "ico": "file-lines",
                     "title":"Consulta novedades",
                     "image":"tmp_servicio.png",
