--- a/src/pages/PORTAL/2_certificados_ingreso.html
+++ b/src/pages/PORTAL/2_certificados_ingreso.html
@@ -34,14 +34,15 @@
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
     <include
-      src="PORTAL/p_top.html"
-      locals='{
-        "cls":"",
-        "ico":"money-check-pen", 
-        "title":"Certificado de ingresos y retenciones",
-        "image":"tmp_header.png",
-        "content":"¡Obtén tu certificado de ingresos y retenciones en un instante! Simplifica tus diligencias y accede a la información que necesitas rápidamente."
-     }'
+      src="PORTAL/p_link_servicio.html"
+      locals='{ 
+        "cls":"active",
+        "link":"/PORTAL/2_certificados_colilla.html",
+        "ico": "file-invoice",
+        "title":"Certificados y otros documentos",
+        "image":"tmp_servicio.png",
+        "content":"Aquí podrás gestionar todos tus certificados y los documentos que necesitas, ¡de forma rápida y sencilla! "
+    }'
     ></include>
 
     <div id="servicios" class="as__section pa__options">
