--- a/src/pages/PORTAL/2_certificados_pension.html
+++ b/src/pages/PORTAL/2_certificados_pension.html
@@ -34,14 +34,14 @@
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
     <include
-      src="PORTAL/p_top.html"
-      locals='{
-      "cls":"",
-      "ico":"file-lines",
-      "title":"Certificado de pensión",
-      "image":"tmp_header.png",
-      "content":"¡Aquí puedes solicitar los certificados que necesitas de forma rápida y sencilla!"
-   }'
+      src="PORTAL/p_link_servicio.html"
+      locals='{ "cls":"active",
+        "link":"/PORTAL/2_certificados_colilla.html",
+        "ico": "file-invoice",
+        "title":"Certificados y otros documentos",
+        "image":"tmp_servicio.png",
+        "content":"Aquí podrás gestionar todos tus certificados y los documentos que necesitas, ¡de forma rápida y sencilla! "
+      }'
     ></include>
 
     <div id="servicios" class="as__section pa__options">
