--- a/src/pages/PORTAL/error_saturado.html
+++ b/src/pages/PORTAL/error_saturado.html
@@ -1,8 +1,4 @@
-<extends
-  src="portal.html"
-  locals='{ "id": "as__home",
-"top":"" }'
->
+<extends src="portal_clean.html" locals='{ "id": "pa__login", "top":"" }'>
   <block name="head">
     <title>ASULADO Seguros de Vida</title>
     <meta name="title" content="ASULADO Seguros de Vida" />
@@ -33,33 +29,22 @@
   </block>
   <!-- CONTENIDO DEL HOME -->
   <block name="content">
-    <include
-      src="PORTAL/p_top_no_img.html"
-      locals='{ 
-        "cls":"inl small",
-        "ico": "xmark",
-        "title":"Página saturada",
-        "image":"tmp_header.png",
-        "content":""
-      }'
-    ></include>
-
-    <div id="content" class="as__section pa__inter">
-      <div class="as__section_wrapper">
-        <div class="as__section_content_full pa__inter_content">
-          <div class="seacrh_result">
-            <div class="no_results">
-              <h4>¡Hay muchas personas intentando acceder a la página!</h4>
-              <p>Intenta de nuevo más tarde</p>
-              <h3>¡Gracias por tu comprensión!</h3>
-              <img src="/assets/images/PORTAL/top_search_no.png" alt="" />
-            </div>
-          </div>
+    <div class="pa_login pa_mant">
+      <div class="pa_login_screen">
+        <div class="error">
+          <h4 class="anim_1">
+            ¡Hay muchas personas intentando acceder a la página!
+          </h4>
+          <p class="anim_1">Intenta de nuevo más tarde</p>
+          <h3 class="anim_1">¡Gracias por tu comprensión!</h3>
+          <img
+            class="anim_1"
+            src="/assets/images/PORTAL/top_search_no.png"
+            alt=""
+          />
         </div>
       </div>
     </div>
-
-    <include src="PORTAL/p_ayuda.html"></include>
   </block>
   <!-- FIN CONTENIDO DEL HOME -->
 </extends>
