--- a/src/pages/PORTAL/error_303.html
+++ b/src/pages/PORTAL/error_303.html
@@ -32,6 +32,11 @@
     <div class="pa_login pa_mant">
       <div class="pa_login_screen">
         <div class="error">
+          <img
+            class="anim_1 logo"
+            src="/assets/images/logo_asulado.svg"
+            alt="logo_asulado"
+          />
           <h4 class="anim_1">Parece que no tienes autorización para esto.</h4>
           <h3 class="anim_1">
             Si necesitas ayuda puedes ponerte en contacto. ¡Estamos aquí para
