--- a/src/pages/PORTAL/error_404.html
+++ b/src/pages/PORTAL/error_404.html
@@ -32,6 +32,11 @@
     <div class="pa_login pa_mant">
       <div class="pa_login_screen">
         <div class="error">
+          <img
+            class="anim_1 logo"
+            src="/assets/images/logo_asulado.svg"
+            alt="logo_asulado"
+          />
           <h4 class="anim_1">¡Parece que esta página no existe!</h4>
           <h3 class="anim_1">
             Puedes explorar otras secciones de nuestro sitio web
