--- a/src/pages/PORTAL/error_500.html
+++ b/src/pages/PORTAL/error_500.html
@@ -32,6 +32,11 @@
     <div class="pa_login pa_mant">
       <div class="pa_login_screen">
         <div class="error">
+          <img
+            class="anim_1 logo"
+            src="/assets/images/logo_asulado.svg"
+            alt="logo_asulado"
+          />
           <h4 class="anim_1">¡Parece que algo inesperado ha sucedido!</h4>
           <h3 class="anim_1">Por favor, inténtalo de nuevo más tarde</h3>
           <img
