--- a/src/pages/PORTAL/error_mantenimiento.html
+++ b/src/pages/PORTAL/error_mantenimiento.html
@@ -32,6 +32,11 @@
     <div class="pa_login pa_mant">
       <div class="pa_login_screen">
         <div class="error">
+          <img
+            class="anim_1 logo"
+            src="/assets/images/logo_asulado.svg"
+            alt="logo_asulado"
+          />
           <h3 class="anim_1">
             Estamos realizando mantenimiento a nuestro portal, por favor intenta
             más tarde.
