--- a/src/pages/PORTAL/error_saturado.html
+++ b/src/pages/PORTAL/error_saturado.html
@@ -32,6 +32,11 @@
     <div class="pa_login pa_mant">
       <div class="pa_login_screen">
         <div class="error">
+          <img
+            class="anim_1 logo"
+            src="/assets/images/logo_asulado.svg"
+            alt="logo_asulado"
+          />
           <h4 class="anim_1">
             ¡Hay muchas personas intentando acceder a la página!
           </h4>
