Update extends src in error_404.html

--- a/src/pages/PORTAL/error_404.html
+++ b/src/pages/PORTAL/error_404.html
@@ -1,4 +1,4 @@
-<extends src="portal_clean.html" locals='{ "id": "pa__login", "top":"" }'>
+<extends src="portal.html" locals='{ "id": "as__home", "top":"" }'>
   <block name="head">
     <title>ASULADO Seguros de Vida</title>
     <meta name="title" content="ASULADO Seguros de Vida" />
