--- a/src/pages/PORTAL/2_certificados_colilla.html
+++ b/src/pages/PORTAL/2_certificados_colilla.html
@@ -38,9 +38,9 @@
       locals='{
       "cls":"",
       "ico":"file-invoice",
-      "title":"Colilla de pagos",
-      "image":"tmp_header.png",
-      "content":"Aquí podrás obtener información detallada sobre los pagos de tu mesada. ¡Explora y gestiona tu información pensional de manera fácil y rápida!"
+      "title":"Certificados y otros documentos",
+      "image":"tmp_servicio.png",
+      "content":"Aquí podrás gestionar todos tus certificados y los documentos que necesitas, ¡de forma rápida y sencilla! "
      }'
     ></include>
 
@@ -51,12 +51,10 @@
             <include
               src="PORTAL/p_link_servicio.html"
               locals='{ "cls":"active",
-               "link":"/PORTAL/2_certificados_colilla.html",
-               "ico": "file-invoice",
-               "title":"Certificados y otros documentos",
-               "image":"tmp_servicio.png",
-               "content":"Aquí podrás gestionar todos tus certificados y los documentos que necesitas, ¡de forma rápida y sencilla! "
-              }'
+              "link":"/PORTAL/2_certificados_colilla.html",
+              "ico": "file-invoice",  "title":"Colilla de pagos",
+              "image":"tmp_servicio.png",
+              "content":"Documento que reúne información sobre tu mesada pensional, incluyendo: valor mensual de la mesada, fecha y descuentos realizados."}'
             ></include>
 
             <include
