--- a/src/pages/PORTAL/2_certificados_ingreso.html
+++ b/src/pages/PORTAL/2_certificados_ingreso.html
@@ -36,12 +36,12 @@
     <include
       src="PORTAL/p_top.html"
       locals='{
-    "cls":"",
-    "ico":"file-invoice",
-    "title":"Certificados y otros documentos",
-    "image":"tmp_servicio.png",
-    "content":"Aquí podrás gestionar todos tus certificados y los documentos que necesitas, ¡de forma rápida y sencilla! "
-   }'
+      "cls":"",
+      "ico":"file-invoice",
+      "title":"Certificados y otros documentos",
+      "image":"tmp_header.png",
+      "content":"Aquí podrás gestionar todos tus certificados y los documentos que necesitas, ¡de forma rápida y sencilla! "
+     }'
     ></include>
 
     <div id="servicios" class="as__section pa__options">
