Update error messages and styles

--- a/src/pages/PORTAL/error_303.html
+++ b/src/pages/PORTAL/error_303.html
@@ -37,7 +37,10 @@
             src="/assets/images/logo_asulado.svg"
             alt="logo_asulado"
           />
-          <h4 class="anim_1">Parece que no tienes autorización para esto.</h4>
+          <h4 class="anim_1">
+            Parece que no tienes autorización para
+            <a href="#" class="btn"> ingresar aquí</a>
+          </h4>
           <h3 class="anim_1">
             Si necesitas ayuda puedes ponerte en contacto. ¡Estamos aquí para
             ayudarte!
