--- a/src/pages/PORTAL/error_404.html
+++ b/src/pages/PORTAL/error_404.html
@@ -39,7 +39,7 @@
           />
           <h4 class="anim_1">¡Parece que esta página no existe!</h4>
           <h3 class="anim_1">
-            Puedes explorar otras secciones de nuestro sitio web
+            Te invitamos a explorar otras acciones de nuestro sitio web.
           </h3>
           <img
             class="anim_1"
