--- a/src/pages/PORTAL/error_500.html
+++ b/src/pages/PORTAL/error_500.html
@@ -37,7 +37,7 @@
             src="/assets/images/logo_asulado.svg"
             alt="logo_asulado"
           />
-          <h4 class="anim_1">¡Parece que algo inesperado ha sucedido!</h4>
+          <h4 class="anim_1">¡Parece que algo inesperado ha ocurrido!</h4>
           <h3 class="anim_1">Por favor, inténtalo de nuevo más tarde</h3>
           <img
             class="anim_1"
