--- a/src/pages/PORTAL/error_mantenimiento.html
+++ b/src/pages/PORTAL/error_mantenimiento.html
@@ -37,10 +37,11 @@
             src="/assets/images/logo_asulado.svg"
             alt="logo_asulado"
           />
-          <h3 class="anim_1">
-            Estamos realizando mantenimiento a nuestro portal, por favor intenta
-            más tarde.
-          </h3>
+          <h3 class="anim_1">¡Estamos creando mejores experiencias para ti!</h3>
+          <h4 class="anim_1">
+            Nuestro portal se encuentra en mantenimiento. Te esperamos
+            nuevamente en un rato.
+          </h4>
           <img
             class="anim_1"
             src="/assets/images/PORTAL/top_search_no.png"
