--- a/src/pages/PORTAL/error_saturado.html
+++ b/src/pages/PORTAL/error_saturado.html
@@ -38,9 +38,9 @@
             alt="logo_asulado"
           />
           <h4 class="anim_1">
-            ¡Hay muchas personas intentando acceder a la página!
+            ¡Hay muchas personas intentando acceder a nuestra página!
           </h4>
-          <p class="anim_1">Intenta de nuevo más tarde</p>
+          <p class="text-try anim_1">Intenta de nuevo más tarde</p>
           <h3 class="anim_1">¡Gracias por tu comprensión!</h3>
           <img
             class="anim_1"
